--- a/pom.xml
+++ b/pom.xml
@@ -68,11 +68,19 @@
 		    <groupId>org.seleniumhq.selenium</groupId>
 		    <artifactId>selenium-java</artifactId>
 		    <version>3.14.0</version>
-		</dependency>     
+		</dependency>
+		<dependency>
+			 <groupId>junit</groupId>
+			 <artifactId>junit</artifactId>
+			 <version>4.12</version>
+			 <scope>test</scope>
+		</dependency>
     </dependencies>
 
     <properties>
         <java.version>1.8</java.version>
+        <maven.compiler.source>7</maven.compiler.source>
+ 		<maven.compiler.target>7</maven.compiler.target>
     </properties>
 
 
@@ -82,8 +90,89 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+            <plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.7.9</version>
+				<executions>
+					<execution>
+						<id>default-prepare-agent</id>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>default-prepare-agent-integration</id>
+						<goals>
+							<goal>prepare-agent-integration</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>default-report</id>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>default-report-integration</id>
+						<goals>
+							<goal>report-integration</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>default-check</id>
+						<goals>
+							<goal>check</goal>
+						</goals>
+					<configuration>
+						<rules>
+							<!-- implementation is needed only for Maven 2 -->
+							<rule implementation="org.jacoco.maven.RuleConfiguration">
+								<element>BUNDLE</element>
+								<limits>
+									<!-- implementation is needed only for Maven 2 -->
+									<limit implementation="org.jacoco.report.check.Limit">
+										<counter>COMPLEXITY</counter>
+										<value>COVEREDRATIO</value>
+										<minimum>0.60</minimum>
+									</limit>
+								</limits>
+							</rule>
+					</rules>
+					</configuration>
+				</execution>
+			</executions>
+		</plugin> 
         </plugins>
     </build>
+    
+	<reporting>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-project-info-reports-plugin</artifactId>
+				<version>2.7</version>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-report-plugin</artifactId>
+				<configuration>
+					<skipEmptyReport>false</skipEmptyReport>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<reportSets>
+					<reportSet>
+						<reports>
+							<report>report</report>
+						</reports>
+					</reportSet>
+				</reportSets>
+			</plugin>
+		</plugins>
+	</reporting>
 
     <repositories>
         <repository>
